# checklist

./: .gitignore  app.py  app_new.py  db.sqlite  models.py  pyproject.toml  requirements.txt
app/: app.py
app/api/api_v1/: router.py
app/api/api_v1/handlers/: user.py
app/api/auth/: jwt.py
app/core/: config.py  security.py  utils.py
app/models/: user_model.py  user_models.py
app/schemas/: auth_schema.py  user_schema.py
app/services/: user_service.py
templates-1/: base.html
