[tool.poetry]
name = "checklist"
version = "0.1.0"
description = ""
authors = ["kofi-teddy <agudogot@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
fastapi = "^0.92.0"
uvicorn = {extras = ["standard"], version = "^0.20.0"}
python-decouple = "^3.7"
beanie = "^1.17.0"
email-validator = "^1.3.1"
pydantic = "^1.10.5"
pymongo = "^4.3.3"
python-jose = "^3.3.0"
cryptography = "^39.0.1"
python-multipart = "^0.0.5"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
